--- a/DirectXGame.vcxproj.filters
+++ b/DirectXGame.vcxproj.filters
@@ -42,10 +42,10 @@
     <ClCompile Include="Sprite.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="3d\FbxLoader.cpp">
+    <ClCompile Include="3d\Fbx_Model.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Fbx_Model.cpp">
+    <ClCompile Include="3d\FbxLoader.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -102,11 +102,11 @@
     <ClInclude Include="Sprite.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="3d\FbxLoader.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="3d\Fbx_Model.h">
+      <Filter>ソース ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="Fbx_Model.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="3d\FbxLoader.h">
+      <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
